Multi-namespace_multipods/nginx-deployment-node1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-node1-deployment
  namespace: node1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-node1
  template:
    metadata:
      labels:
        app: nginx-node1
    spec:
      containers:
      - name: nginx-node1
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-node1-service
  namespace: node1
spec:
  selector:
    app: nginx-node1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
