Multi-namespace_multipods/nginx-deployment-node2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-node2-deployment
  namespace: node2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-node2
  template:
    metadata:
      labels:
        app: nginx-node2
    spec:
      containers:
      - name: nginx-node2
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-node2-service
  namespace: node2
spec:
  selector:
    app: nginx-node2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
